// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BinaryPagination should render empty 1`] = `
<ul
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
      "listStyle": "none",
      "padding": 0,
    }
  }
/>
`;

exports[`BinaryPagination should render with data 1`] = `
<ul
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
      "listStyle": "none",
      "padding": 0,
    }
  }
>
  <li>
    <div
      data-mock="Link"
    >
      ← 
      Prev title
    </div>
  </li>
  <li>
    <div
      data-mock="Link"
    >
      Next title
       →
    </div>
  </li>
</ul>
`;

exports[`BinaryPagination should use slug if title not provided 1`] = `
<ul
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
      "listStyle": "none",
      "padding": 0,
    }
  }
>
  <li>
    <div
      data-mock="Link"
    >
      ← 
      /prev
    </div>
  </li>
  <li>
    <div
      data-mock="Link"
    >
      /next
       →
    </div>
  </li>
</ul>
`;

exports[`BinaryPagination shouldn't render without slug 1`] = `
<ul
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
      "listStyle": "none",
      "padding": 0,
    }
  }
/>
`;
